--- a/app/src/main/res/layout/activity_minigame.xml
+++ b/app/src/main/res/layout/activity_minigame.xml
@@ -67,6 +67,28 @@
         app:layout_constraintBottom_toBottomOf="@id/horizontalguideline"
         app:layout_constraintEnd_toEndOf="@id/verticalguideline" />
 
+    <ImageView
+        android:contentDescription="@string/hungerbar"
+        android:background="@drawable/ic_health_fill_vertical"
+        app:layout_constraintStart_toEndOf="@id/placeholder"
+        app:layout_constraintTop_toTopOf="@id/placeholder"
+        android:layout_width="0dp"
+        app:layout_constraintHeight_percent="0.4"
+        android:layout_height="0dp"
+        app:layout_constraintWidth_percent="0.1"/>
+
+    <ImageView
+        android:id="@+id/hungerfill"
+        android:contentDescription="@string/hungerbar"
+        android:src="@drawable/ic_hunger_fill_clip"
+        android:scaleType="fitXY"
+        app:layout_constraintStart_toEndOf="@id/placeholder"
+        app:layout_constraintTop_toTopOf="@id/placeholder"
+        android:layout_width="0dp"
+        app:layout_constraintHeight_percent="0.4"
+        android:layout_height="0dp"
+        app:layout_constraintWidth_percent="0.1"/>
+
     <FrameLayout
         android:id="@+id/placeholder2"
         android:layout_width="0dp"
