--- a/app/src/main/res/layout/activity_training.xml
+++ b/app/src/main/res/layout/activity_training.xml
@@ -67,19 +67,6 @@
         app:layout_constraintBottom_toBottomOf="@id/horizontalguideline"
         app:layout_constraintEnd_toEndOf="@id/verticalguideline" />
 
-<!--    <FrameLayout
-        android:id="@+id/placeholder2"
-        android:layout_width="0dp"
-        app:layout_constraintWidth_percent="0.7"
-        app:layout_constraintHeight_percent="0.45"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/textboxguideline"
-        app:layout_constraintEnd_toEndOf="@id/verticalguideline">
-
-
-
-    </FrameLayout>-->
-
     <TextView
         android:background="@drawable/ic_launcher_background"
         android:id="@+id/Title"
@@ -100,7 +87,7 @@
         android:gravity="center"
         android:textSize="20sp"
         android:layout_width="0dp"
-        app:layout_constraintHeight_percent="0.25"
+        app:layout_constraintHeight_percent="0.15"
         android:layout_height="0dp"
         app:layout_constraintWidth_percent="0.7"
         app:layout_constraintTop_toBottomOf="@id/textcontentguideline"
@@ -132,6 +119,74 @@
         android:alpha="0.7"
         android:rotation="180"
         />
+
+    <TextView
+        android:id="@+id/training_text"
+        app:layout_constraintHeight_percent="0.05"
+        android:text="@string/diligence"
+        android:gravity="center"
+        android:textSize="15sp"
+        android:layout_height="0dp"
+        android:layout_width="0dp"
+        app:layout_constraintWidth_percent="0.3"
+        app:layout_constraintStart_toStartOf="@id/content"
+        app:layout_constraintTop_toBottomOf="@id/content"/>
+    <TextView
+        android:id="@+id/hunger_text"
+        app:layout_constraintHeight_percent="0.05"
+        android:text="@string/hunger"
+        android:gravity="center"
+        android:textSize="15sp"
+        android:layout_height="0dp"
+        android:layout_width="0dp"
+        app:layout_constraintWidth_percent="0.3"
+        app:layout_constraintStart_toStartOf="@id/content"
+        app:layout_constraintTop_toBottomOf="@id/training_text"/>
+
+
+    <ImageView
+        android:contentDescription="@string/hungerbar"
+        android:background="@drawable/ic_health_fill"
+        app:layout_constraintStart_toEndOf="@id/training_text"
+        app:layout_constraintTop_toBottomOf="@id/content"
+        android:layout_width="0dp"
+        app:layout_constraintHeight_percent="0.05"
+        android:layout_height="0dp"
+        app:layout_constraintWidth_percent="0.4"/>
+
+    <ImageView
+        android:id="@+id/trainingfill"
+        android:contentDescription="@string/hungerbar"
+        android:scaleType="fitXY"
+        android:src="@drawable/ic_horizontal_health_clip"
+        app:layout_constraintStart_toEndOf="@id/training_text"
+        app:layout_constraintTop_toBottomOf="@id/content"
+        android:layout_width="0dp"
+        app:layout_constraintHeight_percent="0.05"
+        android:layout_height="0dp"
+        app:layout_constraintWidth_percent="0.4"/>
+
+    <ImageView
+        android:contentDescription="@string/hungerbar"
+        android:background="@drawable/ic_health_fill"
+        app:layout_constraintStart_toEndOf="@id/hunger_text"
+        app:layout_constraintTop_toBottomOf="@id/trainingfill"
+        android:layout_width="0dp"
+        app:layout_constraintHeight_percent="0.05"
+        android:layout_height="0dp"
+        app:layout_constraintWidth_percent="0.4"/>
+
+    <ImageView
+        android:id="@+id/hungerfill"
+        android:scaleType="fitXY"
+        android:contentDescription="@string/hungerbar"
+        android:src="@drawable/ic_horizontal_health_clip"
+        app:layout_constraintStart_toEndOf="@id/hunger_text"
+        app:layout_constraintTop_toBottomOf="@id/trainingfill"
+        android:layout_width="0dp"
+        app:layout_constraintHeight_percent="0.05"
+        android:layout_height="0dp"
+        app:layout_constraintWidth_percent="0.4"/>
 
     <Button
         android:id="@+id/back"
