--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,152 +1,191 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:orientation="vertical">
 
-
-    <androidx.constraintlayout.widget.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/horizontalguideline"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.45"/>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/infoguideline"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.05"/>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/pickerguideline"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.75"/>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/verticalguideline"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.85"/>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/verticaliconguideline"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.87"/>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/selectorguideline"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.25"/>
-
-    <ImageView
-        android:contentDescription="@string/monsterinfo"
-        android:id="@+id/monster_info_popup"
-        android:background="@color/colorPrimary"
-        android:layout_width="0dp"
-        app:layout_constraintHeight_percent="0.05"
-        android:layout_height="0dp"
-        app:layout_constraintWidth_percent="0.1"
-        app:layout_constraintTop_toBottomOf="@id/infoguideline"
-        app:layout_constraintStart_toStartOf="@id/verticaliconguideline"/>
-
-    <FrameLayout
-        android:id="@+id/placeholder"
-        android:layout_width="0dp"
-        app:layout_constraintHeight_percent="0.4"
-        android:layout_height="0dp"
-        app:layout_constraintWidth_percent="0.7"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="@id/horizontalguideline"
-        app:layout_constraintEnd_toEndOf="@id/verticalguideline" />
-
-    <TextView
-        android:id="@+id/monster_name"
-        android:gravity="center"
-        android:layout_width="0dp"
-        app:layout_constraintHeight_percent="0.05"
-        android:layout_height="0dp"
-        app:layout_constraintWidth_percent="0.3"
-        android:textSize="25sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <LinearLayout
-        app:layout_constraintTop_toBottomOf="@id/horizontalguideline"
-        app:layout_constraintEnd_toEndOf="@id/verticalguideline"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintHeight_percent="0.4">
+        android:layout_weight="10"
+        tools:context=".MainActivity">
 
+
+        <androidx.constraintlayout.widget.Guideline
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/horizontalguideline"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.45"/>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/infoguideline"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.05"/>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/infoguideline2"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.12"/>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/pickerguideline"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.75"/>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/verticalguideline"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.85"/>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/verticaliconguideline"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.87"/>
+
+        <androidx.constraintlayout.widget.Guideline
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/selectorguideline"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.25"/>
+
+        <ImageView
+            android:contentDescription="@string/monsterinfo"
+            android:id="@+id/monster_info_popup"
+            android:background="@color/colorPrimary"
+            android:layout_width="0dp"
+            app:layout_constraintHeight_percent="0.05"
+            android:layout_height="0dp"
+            app:layout_constraintWidth_percent="0.1"
+            app:layout_constraintTop_toBottomOf="@id/infoguideline"
+            app:layout_constraintStart_toStartOf="@id/verticaliconguideline"/>
+
+        <ImageView
+            android:contentDescription="@string/monsterinfo"
+            android:id="@+id/game_options"
+            android:background="@color/colorPrimary"
+            android:layout_width="0dp"
+            app:layout_constraintHeight_percent="0.05"
+            android:layout_height="0dp"
+            app:layout_constraintWidth_percent="0.1"
+            app:layout_constraintTop_toBottomOf="@id/infoguideline2"
+            app:layout_constraintStart_toStartOf="@id/verticaliconguideline"/>
+
+        <FrameLayout
+            android:id="@+id/placeholder"
+            android:layout_width="0dp"
+            app:layout_constraintHeight_percent="0.4"
+            android:layout_height="0dp"
+            app:layout_constraintWidth_percent="0.7"
+            android:gravity="center"
+            app:layout_constraintBottom_toBottomOf="@id/horizontalguideline"
+            app:layout_constraintEnd_toEndOf="@id/verticalguideline" />
 
         <TextView
-            android:id="@+id/total_time"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center" />
-        <TextView
-            android:id="@+id/tv_steps"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center" />
+            android:id="@+id/monster_name"
+            android:gravity="center"
+            android:layout_width="0dp"
+            app:layout_constraintHeight_percent="0.05"
+            android:layout_height="0dp"
+            app:layout_constraintWidth_percent="0.3"
+            android:textSize="25sp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
+        <LinearLayout
+            app:layout_constraintTop_toBottomOf="@id/horizontalguideline"
+            app:layout_constraintEnd_toEndOf="@id/verticalguideline"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            app:layout_constraintHeight_percent="0.4">
+
+
+            <TextView
+                android:id="@+id/total_time"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center" />
+            <TextView
+                android:id="@+id/tv_steps"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center" />
+
+
+            <Button
+                android:id="@+id/btn_start"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Start Pedometer" />
+
+            <Button
+                android:id="@+id/btn_stop"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Stop Pedometer" />
+
+            <Button
+                android:id="@+id/event"
+                android:visibility="invisible"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <Button
+                android:id="@+id/test"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+        <NumberPicker
+            android:id="@+id/picker"
+            android:descendantFocusability="blocksDescendants"
+            android:layout_width="0dp"
+            app:layout_constraintWidth_percent="0.5"
+            android:layout_height="0dp"
+            app:layout_constraintHeight_percent="0.1"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintTop_toBottomOf="@id/pickerguideline"
+            app:layout_constraintStart_toStartOf="@id/selectorguideline"/>
 
         <Button
-            android:id="@+id/btn_start"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Start Pedometer" />
+            android:id="@+id/selection"
+            android:textSize="25sp"
+            android:orientation="horizontal"
+            android:layout_width="0dp"
+            app:layout_constraintWidth_percent="0.5"
+            android:layout_height="0dp"
+            app:layout_constraintHeight_percent="0.1"
+            app:layout_constraintTop_toBottomOf="@id/picker"
+            app:layout_constraintStart_toStartOf="@id/selectorguideline"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <Button
-            android:id="@+id/btn_stop"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Stop Pedometer" />
-
-        <Button
-            android:id="@+id/event"
-            android:visibility="invisible"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-        <Button
-            android:id="@+id/test"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-    </LinearLayout>
-
-    <NumberPicker
-        android:id="@+id/picker"
-        android:layout_width="0dp"
-        app:layout_constraintWidth_percent="0.5"
+    <!-- our banner ad view, adUnitId saved in repository will be the
+    default test ID-->
+    <com.google.android.gms.ads.AdView
+        android:layout_weight="1"
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.1"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintTop_toBottomOf="@id/pickerguideline"
-        app:layout_constraintStart_toStartOf="@id/selectorguideline"/>
-
-    <Button
-        android:id="@+id/selection"
-        android:textSize="25sp"
-        android:orientation="horizontal"
-        android:layout_width="0dp"
-        app:layout_constraintWidth_percent="0.5"
-        android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.1"
-        app:layout_constraintTop_toBottomOf="@id/picker"
-        app:layout_constraintStart_toStartOf="@id/selectorguideline"/>
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
+    </com.google.android.gms.ads.AdView>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
