--- a/app/src/main/res/layout/store_popup.xml
+++ b/app/src/main/res/layout/store_popup.xml
@@ -70,7 +70,7 @@
                         android:text="@string/removeads"/>
 
                     <Button
-                        android:id="@+id/volumeBar"
+                        android:id="@+id/buy_ad"
                         android:layout_width="0dp"
                         android:layout_weight="0.4"
                         android:layout_height="match_parent" />
